--- a/app/application.scss
+++ b/app/application.scss
@@ -112,15 +112,25 @@ webview {
 // Menu
 // ----------------------------------------------------------------------
 
-.menu-item {
+.menu-item-bg {
   background-color: #c7242e;
+  border: 1px solid black;
+  &.noBottomBorder {
+    border-bottom: none;
+  }
+  &.active {
+    background-color: #160808;
+  }
+  &.disabled {
+    background-color: #666;
+  }
+}
+
+.menu-item {
   color: #fff;
   text-align: right;
   box-sizing: border-box;
-  padding: 2rem;
-  border: 1px solid #000;
   border-top: none;
-  // border-top: none;
   cursor: default;
 
   * {
@@ -130,15 +140,6 @@ webview {
 
   .inactive {
     opacity: 0;
-  }
-
-  &.active {
-    background-color: #160808;
-  }
-
-  &.disabled {
-    background-color: #666;
-
   }
 
   h1 {
@@ -223,9 +224,6 @@ webview {
   color: #fff !important;
 }
 
-.directoryStoreSurface {
-  // opacity: 0.9 !important;
-}
 
 
 // Keyboard
