--- a/app/application.scss
+++ b/app/application.scss
@@ -1,606 +1,13 @@
-@import "icons";
-
-// Generic + Base Styles
-// ----------------------------------------------------------------------
-$red: #ed1f26;
-
-
-body {
-  margin: 0;
-  font-family: 'FlamaCondensed', 'helvetica neue', 'helvetica', 'arial', 'sans';
-  font-weight: 500;
-  color: #222;
-  background-color: #000;
-  // background-image: url('/dev-bg.png');
-  color: #4D4E4C;
-}
-
-* {
-  cursor: default;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.section {
-  padding-left: 200px;
-}
-
-button {
-  background: transparent;
-  color: #fff;
-  border: 1px solid #fff;
-  font-size: 100%;
-}
-
-
-// Typography
-// ----------------------------------------------------------------------
-
-h1 {
-  font-size: 70px;
-  font-weight: 600;
-}
-
-h3 {
-  font-size: 18px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.bigLightText {
-  font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans';
-  color: #c7242e;
-  text-transform: uppercase;
-  font-weight: 100;
-  font-size: 600%;
-  line-height: 1.15;
-  margin: 0;
-  padding: 0;
-}
-
-
-// Famo.us Integration
-// ----------------------------------------------------------------------
-
-fa-app {
-  position: fixed !important;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-webview {
- height: 100%;
- width: 100%;
-}
-
-.dbl-sided {
-  backface-visibility: visible !important;
-  -webkit-backface-visibility: visible !important;
-}
-
-.full-screen {
-  position: fixed;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
-
-// Screensaver
-// ----------------------------------------------------------------------
-
-.screensaver-touch {
-  border-radius: 50%;
-  background-color: $red;
-  h1 {
-    color: #fff;
-    text-align: center;
-    line-height: 600px;
-    margin: 0;
-    padding: 0;
-  }
-}
-
-
-// Menu
-// ----------------------------------------------------------------------
-
-.menu-item-bg {
-  background-color: #c7242e;
-  border: 1px solid black;
-  &.noBottomBorder {
-    border-bottom: none;
-  }
-  &.active {
-    background-color: #160808;
-  }
-  &.disabled {
-    background-color: #666;
-  }
-}
-
-.menu-item {
-  color: #fff;
-  text-align: right;
-  box-sizing: border-box;
-  border-top: none;
-  cursor: default;
-
-  * {
-    cursor: default;
-    -webkit-transition: opacity 0.3s;
-  }
-
-  .inactive {
-    opacity: 0;
-  }
-
-  h1 {
-    margin: 0 0 10px 0;
-    padding: 0;
-    line-height: 1;
-    cursor: pointer;
-    opacity: 1;
-    -webkit-transition: opacity 0.3s;
-  }
-
-  h3 {
-    margin: 0;
-    padding: 0;
-    opacity: 1;
-    -webkit-transition: opacity 0.3s;
-  }
-}
-
-
-
-// Map
-// ----------------------------------------------------------------------
-
-.map-container {
-  background-color: #c1cdd3;
-}
-
-.map-level-selector-surface.active {
-  background-color: rgba(0,0,0,0.8);
-}
-
-.map-level-selector-surface {
-  background-color: rgba(100,100,100,0.8);
-}
-
-.map-level-selector {
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
-  padding-top: 35%;
-
-}
-
-
-// Directory
-// ----------------------------------------------------------------------
-
-
-.directoryCategory {
-  border-right: 25px solid #dfdfde;
-}
-
-.directoryCategory h3 {
-  font-weight: 200;
-  font-size: 32px;
-  color: #fff;
-  padding-left: 180px;
-  letter-spacing: 4px;
-  white-space: nowrap;
-}
-
-.directoryCategory.active h3{
-  font-weight: 700;
-  color: #c7242e !important;
-}
-
-.directory-no-logo-text {
-  font-size: 300%;
-  color: #656667;
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  line-height: 200px;
-}
-
-.txt-center {
-  text-align: center;
-}
-
-.txt-reversed {
-  color: #fff !important;
-}
-
-
-
-// Keyboard
-// ----------------------------------------------------------------------
-
-svg text {
-  pointer-events:none;
-}
-
-svg * { pointer-events: all; }
-
-g.active {
-  .key-background {
-    fill: #c7242e;
-  }
-}
-
-// Jibestream
-// ----------------------------------------------------------------------
-
-
-#map-container{
-  width: 100%;
-  height:100%;
-}
-
-.st3:hover{
-  fill: #fff;
-}
-
-
-/**** Pop Up ****/
-#popup-render-container{
-  display:none;
-}
-
-
-// Store Card
-// -----------------------------------------------------------------------
-
-.cardstream-card {
-  padding-bottom: 40px;
-
-  .header {
-    position: relative;
-    .close {
-      position: absolute;
-      right: 5px;
-      top: 7px;
-      .wf-remove {
-        font-size: 30px;
-      }
-    }
-  }
-
-  h2 {
-    background-color: #d7d0c7;
-    margin: 0;
-    padding: 10px 20px;
-  }
-}
-
-.related-card {
-  background-color: #d7d0c7;
-   h3 {
-    margin: 0;
-    padding: 5px 10px;
-  }
-}
-
-.light-title {
-  font-family: 'FlamaCondensed', 'helvetica neue', 'helvetica', 'arial', 'sans';
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-.miniMap {
-  width: 400px;
-  height: 400px;
-  margin-right: 10px;
-  border: 1px solid black;
-  float: left;
-
-  svg {
-    width: 400px;
-    height: 400px;
-  }
-
-}
-
-
-// Large Screen
-// -----------------------------------------------------------------------
-
-.large-menu-bg {
-  background-color: rgba(255,255,255,0.7);
-  -webkit-border-bottom-right-radius: 15px;
-  -webkit-border-bottom-left-radius: 15px;
-  -moz-border-radius-bottomright: 15px;
-  -moz-border-radius-bottomleft: 15px;
-  border-bottom-right-radius: 15px;
-  border-bottom-left-radius: 15px;
-}
-
-.large-menu-title {
-  h1 {
-    color: $red;
-    font-size: 80px;
-    line-height: 80px;
-    text-transform: uppercase;
-    font-weight: 100;
-    margin: 0;
-    width: 0;
-    letter-spacing: 1px;
-  }
-}
-
-.large-menu-category-header {
-  em {
-    color: #4d4d4d;
-    font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans';
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 1px;
-  }
-}
-
-.large-menu-category-grid {
-  ul {
-    list-style-type: none;
-    padding: 0;
-
-    li {
-      color: black;
-      font-size: 28px;
-      line-height: 30px;
-      letter-spacing: 1px;
-      margin: 0 0 20px 0;
-      padding-right: 30px;
-    }
-  }
-}
-
-.large-menu-stores-header {
-  h2 {
-    color: black;
-    letter-spacing: 1px;
-  }
-}
-
-.large-menu-floors-header,
-.large-menu-floors-grid,
-.large-menu-floor {
-  z-index: 20;
-}
-
-.large-menu-floor {
-  border-radius: 100px;
-  background: #bbb;
-  color: white;
-  height: 50px;
-  width: 50px;
-
-  p, h1 {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  p {
-    padding-top: 7px;
-    font-size: 14px;
-  }
-
-  h1 {
-    font-size: 30px;
-    margin-top: -10px;
-    font-family: georgia;
-    font-weight: normal;
-  }
-
-  &.active {
-    background: $red;
-  }
-}
-
-.large-menu-stores-grid {
-  ul {
-    list-style-type: none;
-    padding: 0;
-
-    li {
-      font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans';
-      color: #666;
-      font-size: 16px;
-      line-height: 18px;
-      letter-spacing: 1px;
-      padding-right: 20px;
-      margin-bottom: 15px;
-      position: relative;
-
-      div.floor-indicator {
-        position: absolute;
-        height: 8px;
-        width: 8px;
-        border-radius: 100px;
-        background: $red;
-        top: 6px;
-        left: -15px;
-      }
-    }
-  }
-}
-
-.large-menu-title,
-.large-menu-category-header,
-.large-menu-category-grid,
-.large-menu-divider,
-.large-menu-search-icon {
-  z-index: 11;
-}
-
-.large-menu-stores-view-bg,
-.large-menu-search-view-bg {
-  z-index: 12;
-}
-
-.large-menu-stores-view-content {
-  z-index: 13;
-}
-
-.large-menu-stores-header,
-.large-menu-stores-grid,
-.large-menu-goBack {
-  z-index: 14;
-}
-
-.large-menu-goBack {
-  h2 {
-    color: black;
-    font-size: 28px;
-    letter-spacing: 1px;
-  }
-}
-
-.large-menu-back-icon {
-  z-index: 16;
-  border: 5px solid #aaa;
-  border-radius: 100px;
-  font-size: 24px;
-  position: absolute;
-
-  .wf-arrow-left:before {
-    color: $red;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 26px;
-    height: 26px;
-  }
-}
-
-.large-menu-search-icon {
-  font-size: 70px;
-  z-index: 16;
-}
-
-
-// Large Screen Weather
-// ----------------------------------------------------------------------
-.largescreen-weather {
-  color: white;
-  text-align: right;
-
-  h1, h2, h3 {
-    font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans';
-    margin: 0;
-  }
-
-  h1 {
-    font-weight: 500;
-    margin-bottom: -10px;
-  }
-
-  h2 {
-    font-weight: 600;
-    text-transform: capitalize;
-  }
-
-  h3 {
-    font-size: 40px;
-    font-weight: 500;
-  }
-}
-
-
-// Search
-// ----------------------------------------------------------------------
-
-.search-query-text,
-.search-query-placeholder,
-.search-results {
-  z-index: 15;
-}
-
-.search-query-text {
-  h1.searchBox {
-    color: white;
-    border-bottom: 2px solid $red;
-    margin: 30px auto;
-    padding: 20px 1em;
-    line-height: 1;
-    text-align: left;
-    text-transform: uppercase;
-    font-weight: 500;
-  }
-
-  &.largescreen {
-    h1.searchBox {
-      color: black;
-      padding: 0;
-      margin: 0;
-      font-size: 40px;
-      height: 50px;
-    }
-  }
-}
-
-.search-query-placeholder {
-  h2 {
-    font-size: 30px;
-    font-size: 36px;
-    font-weight: 500;
-    margin: 0;
-    color: #6d7072;
-    height: 50px;
-    text-transform: uppercase;
-  }
-  &.largescreen {
-
-  }
-}
-
-.search-results {
-  h1 {
-    color: $red;
-    margin: 0;
-    margin-top: 30px;
-    font-size: 50px;
-    font-weight: 100;
-    letter-spacing: 3px;
-  }
-  h2 {
-    color: white;
-    font-size: 44px;
-    font-weight: 100;
-    margin: 22px 0;
-  }
-  &.largescreen {
-    overflow: hidden;
-    h2 {
-      font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans';
-      color: #666;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 18px;  
-      letter-spacing: 1px;
-      padding-right: 20px;
-      margin-bottom: 15px; 
-    }
-  }
-}
-
-.search-keyboard {
-  z-index: 20;
-}
+@import "modules/core/base";
+@import "modules/core/famous";
+@import "modules/core/typography";
+@import "modules/menu/menu";
+@import "modules/search/search";
+@import "modules/directory/directory";
+@import "modules/kiosk-screensaver/screensaver";
+@import "modules/jibestream-map/map";
+@import "modules/svg-keyboard/keyboard";
+@import "modules/largescreen-weather/largescreen-weather";
+@import "modules/card-stream/card-stream";
+@import "modules/largescreen/largescreen-home";
+@import "public/components/westfield-icons/icons";
