fix menu display bugs, use brand color

--- a/app/modules/core/_base.scss
+++ b/app/modules/core/_base.scss
@@ -1,9 +1,8 @@
 
 
-// Generic + Base Styles
+// Generics + Base Styles
 // ----------------------------------------------------------------------
-$red: #ed1f26;
-
+$brand: #da291c;
 
 
 body {
