--- a/app/modules/kiosk-screensaver/_screensaver.scss
+++ b/app/modules/kiosk-screensaver/_screensaver.scss
@@ -3,7 +3,7 @@
 
 .screensaver-touch {
   border-radius: 50%;
-  background-color: $red;
+  background-color: $brand;
   h1 {
     color: #fff;
     text-align: center;
