--- a/app/modules/search/_search.scss
+++ b/app/modules/search/_search.scss
@@ -2,7 +2,7 @@
 // ----------------------------------------------------------------------
 
 .searchBox {
-  border-bottom: 2px solid $red;
+  border-bottom: 2px solid $brand;
   width: 60%;
   margin: 30px auto;
   padding: 20px 1em;
