--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -56,13 +56,20 @@ h3 {
   margin: 0;
   padding: 0; }
 
+.menu-item-bg {
+  background-color: #da291c;
+  border: 1px solid black; }
+  .menu-item-bg.noBottomBorder {
+    border-bottom: none; }
+  .menu-item-bg.active {
+    background-color: #160808; }
+  .menu-item-bg.disabled {
+    background-color: #666; }
+
 .menu-item {
-  background-color: #c7242e;
   color: #fff;
   text-align: right;
   box-sizing: border-box;
-  padding: 2rem;
-  border: 1px solid #000;
   border-top: none;
   cursor: default; }
   .menu-item * {
@@ -70,10 +77,6 @@ h3 {
     -webkit-transition: opacity 0.3s; }
   .menu-item .inactive {
     opacity: 0; }
-  .menu-item.active {
-    background-color: #160808; }
-  .menu-item.disabled {
-    background-color: #666; }
   .menu-item h1 {
     margin: 0 0 10px 0;
     padding: 0;
@@ -88,7 +91,7 @@ h3 {
     -webkit-transition: opacity 0.3s; }
 
 .searchBox {
-  border-bottom: 2px solid #ed1f26;
+  border-bottom: 2px solid #da291c;
   width: 60%;
   margin: 30px auto;
   padding: 20px 1em;
@@ -129,7 +132,7 @@ h3 {
 
 .screensaver-touch {
   border-radius: 50%;
-  background-color: #ed1f26; }
+  background-color: #da291c; }
   .screensaver-touch h1 {
     color: #fff;
     text-align: center;
@@ -230,7 +233,7 @@ g.active .key-background {
   border-bottom-left-radius: 15px; }
 
 .large-menu-title h1 {
-  color: #ed1f26;
+  color: #da291c;
   font-size: 80px;
   line-height: 80px;
   text-transform: uppercase;
@@ -284,7 +287,7 @@ g.active .key-background {
     font-family: georgia;
     font-weight: normal; }
   .large-menu-floor.active {
-    background: #ed1f26; }
+    background: #da291c; }
 
 .large-menu-store-grid ul {
   list-style-type: none;
@@ -303,7 +306,7 @@ g.active .key-background {
       height: 8px;
       width: 8px;
       border-radius: 100px;
-      background: #ed1f26;
+      background: #da291c;
       top: 6px;
       left: -15px; }
 
@@ -331,7 +334,7 @@ g.active .key-background {
   font-size: 24px;
   position: absolute; }
   .large-menu-back-icon .wf-arrow-left:before {
-    color: #ed1f26;
+    color: #da291c;
     position: absolute;
     margin: auto;
     top: 0;
