--- a/app/modules/jibestream-map/_map.scss
+++ b/app/modules/jibestream-map/_map.scss
@@ -2,6 +2,10 @@
 // Map
 // ----------------------------------------------------------------------
 
+#Holes {
+	display: none !important;
+}
+
 .map-container {
   background-color: #c1cdd3;
 }
