--- a/app/application.scss
+++ b/app/application.scss
@@ -1,13 +1,13 @@
-@import "modules/core/base";
-@import "modules/core/famous";
-@import "modules/core/typography";
-@import "modules/menu/menu";
-@import "modules/search/search";
-@import "modules/directory/directory";
-@import "modules/kiosk-screensaver/screensaver";
-@import "modules/jibestream-map/map";
-@import "modules/svg-keyboard/keyboard";
-@import "modules/card-stream/card-stream";
-@import "modules/largescreen/largescreen-home";
-@import "modules/largescreen/largescreen-weather";
+@import "_modules/core/base";
+@import "_modules/core/famous";
+@import "_modules/core/typography";
+@import "_modules/menu/menu";
+@import "_modules/search/search";
+@import "_modules/directory/directory";
+@import "_modules/kiosk-screensaver/screensaver";
+@import "_modules/jibestream-map/map";
+@import "_modules/svg-keyboard/keyboard";
+@import "_modules/card-stream/card-stream";
+@import "_modules/largescreen/largescreen-home";
+@import "_modules/largescreen/largescreen-weather";
 @import "public/components/westfield-icons/icons";
