--- a/app/core/ui/components/weather/weather.html
+++ b/app/core/ui/components/weather/weather.html
@@ -1,6 +1,6 @@
 <fa-modifier fa-translate="weather.translation" fa-align="weather.alignment" fa-origin="weather.origin" fa-size="weather.size">
 	<fa-surface class="weather">
-		<h1 current-time="format"></h1>
+		<time></time>
 		<h2>{{weather.summary}}</h2>
 		<h3>{{weather.currentTemp}}&deg;F</h3>
 	</fa-surface>
