set up theme typography

--- a/app/application.scss
+++ b/app/application.scss
@@ -3,9 +3,11 @@
 
 // Theme
 @import "core/ui/theme/mixins";
+@import "core/ui/theme/typography";
 @import "core/ui/theme/base";
 @import "core/ui/theme/famous";
-@import "core/ui/theme/typography";
+@import "core/ui/theme/helpers";
 
 // UI Components
+@import "core/ui/components/current-time/current-time";
 @import "core/ui/components/weather/weather";
